Add some initial rules based on Jinja grammar

--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
 	"name": "tree-sitter-nunjucks",
 	"version": "0.1.0",
 	"description": "Nunjucks grammar for tree-sitter",
-	"repository": "https://github.com/stormwarning/tree-sitter-nunjucks",
-	"license": "ISC",
-	"author": "Jeff Nelson (https://tidaltheory.io)",
-	"main": "bindings/node",
-	"types": "bindings/node",
 	"keywords": [
 		"incremental",
 		"parsing",
 		"tree-sitter",
 		"nunjucks"
 	],
+	"repository": "https://github.com/stormwarning/tree-sitter-nunjucks",
+	"license": "ISC",
+	"author": "Jeff Nelson (https://tidaltheory.io)",
+	"main": "bindings/node",
+	"types": "bindings/node",
 	"files": [
 		"grammar.js",
 		"tree-sitter.json",
@@ -23,15 +23,25 @@
 		"src/**",
 		"*.wasm"
 	],
+	"scripts": {
+		"install": "node-gyp-build",
+		"lint": "eslint grammar.js",
+		"prestart": "tree-sitter build --wasm",
+		"start": "tree-sitter playground",
+		"test": "node --test bindings/node/*_test.js"
+	},
+	"prettier": "@zazen/prettier-config",
 	"dependencies": {
 		"node-addon-api": "8.5.0",
 		"node-gyp-build": "4.8.4"
 	},
 	"devDependencies": {
+		"@zazen/prettier-config": "1.1.3",
 		"eslint": "9.31.0",
 		"eslint-config-treesitter": "1.0.2",
-		"tree-sitter-cli": "0.25.8",
-		"prebuildify": "6.0.1"
+		"prebuildify": "6.0.1",
+		"prettier": "3.6.2",
+		"tree-sitter-cli": "0.25.8"
 	},
 	"peerDependencies": {
 		"tree-sitter": "^0.21.1"
@@ -40,12 +50,5 @@
 		"tree-sitter": {
 			"optional": true
 		}
-	},
-	"scripts": {
-		"install": "node-gyp-build",
-		"lint": "eslint grammar.js",
-		"prestart": "tree-sitter build --wasm",
-		"start": "tree-sitter playground",
-		"test": "node --test bindings/node/*_test.js"
 	}
 }
