Add tree-sitter as devDependency

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"eslint-config-treesitter": "1.0.2",
 		"prebuildify": "6.0.1",
 		"prettier": "3.6.2",
+		"tree-sitter": "0.25.0",
 		"tree-sitter-cli": "0.25.8"
 	},
 	"peerDependencies": {
