--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
 		"*.wasm"
 	],
 	"scripts": {
+		"build": "tree-sitter generate",
 		"install": "node-gyp-build",
 		"lint": "eslint grammar.js",
 		"prestart": "tree-sitter build --wasm",
 		"start": "tree-sitter playground",
-		"test": "node --test bindings/node/*_test.js"
+		"test": "npm run build && npm run test:bindings && npm run test:grammar",
+		"test:bindings": "node --test bindings/node/*_test.js",
+		"test:grammar": "tree-sitter test"
 	},
 	"prettier": "@zazen/prettier-config",
 	"dependencies": {
@@ -41,7 +44,6 @@
 		"eslint-config-treesitter": "1.0.2",
 		"prebuildify": "6.0.1",
 		"prettier": "3.6.2",
-		"tree-sitter": "0.25.0",
 		"tree-sitter-cli": "0.25.8"
 	},
 	"peerDependencies": {
