--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"lint": "eslint grammar.js",
 		"prestart": "tree-sitter build --wasm",
 		"start": "tree-sitter playground",
-		"test": "npm run build && npm run test:bindings && npm run test:grammar",
+		"test": "tree-sitter test",
 		"test:bindings": "node --test bindings/node/*_test.js",
 		"test:grammar": "tree-sitter test"
 	},
